LIST OF CHANGES FOR NPG-QC PACKAGE

release 66.3
 - sequence_summary table - extend storage for the header column
 - remove fastqcheck database loader
 - autoqc database deletion script update

release 66.2
 - SeqQC: heatmaps from samtools stats files as a source
 - relax JSON parser (allow non-utf8 characters) when loading sequence_summary
   results to the db
 - ref match results sort order - make deterministic (important for consistency
   of data we load to the warehouse), also add a method to return top two results
 - fixes for composite genotype script following previous release 

release 66.1.1
 - composite genotype check script (call_gtck_composite_rpt.pl) search
     for run folders disabled - only use iRODS cram files

release 66.1
 - autoqc results loader to check for potential composition digest clashes
 - amend upstream_tags check to find previous runs which have reached
     status "analysis complete" (instead of "run complete")

release 66.0
 - GUI for utility QC (inactive)
 - add new bcfstats qc check + viewer change
 - skip incomplete tag zero results in genotype_call POSTing to LIMs
 - minor changes to genotype qc check to support checking against externally
   supplied genotypes instead if they exist
 - handle target samtools stats file - parsing, archiving and viewing.
 - queries to qc_store should always have support for tracking db look-up
 - methods for loading autoqc results moved from npg_qc::autoqc::collection
   to npg_qc::autoqc::qc_store
 - little-used method load_run of npg_qc::autoqc::qc_store class, which did
   not support propagation of tracking db handle, is removed
 - unused public methods in npg_qc::autoqc namespace removed
 - mqc outcomes API - a new method, get_library_outcomes, for retrieving
   library qc outcomes as boolean values
 - deciding whether the entity is subject to manual QC:
     remove special provisions for GCLP;
     enforce that libraries and lanes cannot be qc-ed on the same page